# vision-pipeline

./: .gitignore  CMakeLists.txt  README.md
apps/detect_image/: main.cpp
cmake/: FindONNXRuntime.cmake
configs/: demo.yaml
include/visioncore/: coco_names.hpp  config.hpp  json_writer.hpp  metrics.hpp  ort_session.hpp  overlay.hpp  postprocess.hpp  preprocess.hpp  types.hpp
scripts/: export_ultralytics_onnx.py  fetch_models.sh  fetch_onnxruntime.sh  validate_onnx.py
src/: config.cpp  json_writer.cpp  metrics.cpp  ort_session.cpp  overlay.cpp  postprocess.cpp  preprocess.cpp
